fix linebreak on right rail

--- a/src/scss/components/NextStepSidebarForm.scss
+++ b/src/scss/components/NextStepSidebarForm.scss
@@ -7,7 +7,7 @@
     .field{
         color: $secondaryColor;
         margin-bottom: 20px;
-        white-space: pre;
+        white-space: pre-wrap;
     }
     .actionsBar{
         text-align: right;
